# LPCNet

./: CMakeLists.txt  README.md  dump_lpcnet.py  npy2f32.py  test_lpcnet.py
src/: Makefile  denoise.c  dump_data.c  lpcnet.c  nnet.c  test_vec.c  train_lpcnet.py  vec.h  vec_avx.h  vec_avx2.h  vec_neon.h
tools/: feature_extract.sh
